# roundtrip-closure

./: .env.example  .gitignore  README.md  chapter3_concept_note.md  checkpoints  closure_cache.py  closure_decision.py  closure_metrics.py  closure_paths.py  colab_pilot.ipynb  concept_note.md  config.py  data  decontaminate.py  doe.py  judge_llm.py  llm_dispatch.py  logs  mutation_testing.py  ollama_client.py  openrouter_client.py  paper_equations.md  paper_scope_and_limitations.md  prepare_roundtrip.py  pyproject.toml  pytest_cache.py  results  roundtrip.ipynb  roundtrip_clean.ipynb  train_roundtrip.py
analyze/: __init__.py  holdout_sensitivity.py  human_eval.py  load_results.py  rq4_closed_vs_open.py  sample_stratify.py  stats.py  tables.py
human_eval/: README.md  annotator_briefing.md  calibration_items.md  consent_form.md  rubric.md
paper_draft/: CH1_CH2_CITATION_DECISION.md  Makefile  README.md  cover_letter_emse.md  equations_and_algorithms.tex  main.tex  references.bib  section_1_introduction.md  section_1_introduction.tex  section_2_related_work.md  section_2_related_work.tex  section_3_framework.tex  section_3_methods.md  section_3_methods.tex  section_4_experiment_setup.tex  section_4_results.md  section_4_results.tex  section_5_discussion.md  section_5_discussion.tex  section_5_results.tex  section_6_discussion.tex  section_6_threats.md  section_6_threats.tex  section_7_conclusion.md  section_7_conclusion.tex  section_8_human_eval_addendum.tex  section_author_matter.md  section_author_matter.tex  section_end_matter.tex
plots/: __init__.py  figures.py  style.py
scripts/: __init__.py  build_capability_preservation.py  build_disagreement_decomposition.py  build_path_cell_anova.py  build_per_operator_table.py  build_stage_contribution_figure.py  build_threshold_sensitivity.py  recover_pilot.py  regen_per_operator.py  rq4_closed_weight_sweep.sh  run_analysis.py  run_pilot.py  w3_holdout_sweep.sh
tables/: tab_anova.csv  tab_anova.tex  tab_anova_interaction.csv  tab_anova_interaction.tex  tab_cache_efficiency.csv  tab_cache_efficiency.tex  tab_capability_preservation.csv  tab_capability_preservation.tex  tab_closure_rate_matrix.csv  tab_closure_rate_matrix.tex  tab_contamination.tex  tab_disagreement_by_path.csv  (+30 more)
(+13 files in other folders)
